Changed 'file system' to 'file browser' in the information panel.  Added spacing to the action items in the help modals and removed the bullits from the workflow links to fix a styling bug with chrome browsers.  Updated the context menus to make them more consistent accross node types.  Moved the file browser help action items modal to the file browser header ? icon.  Added conversion and download help action items and condensed other action items with similar instructions.  Moved the popup note to the relavennt action items.  Added the create a workflow help action item to the Model Editor Help.  Renamed the information button titles to be more verby.  Added documentation to the 'Switching Settings' tooltip.  Reversed the order of the switching settings input fields and radio buttons.

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -36,6 +36,10 @@ a.disabled {
   cursor: default;
 }
 
+.nav-item {
+  display: inline-block;
+}
+
 .name {
   width: 8rem;
 }
